[project]
name = "pytrad"
version = "0.1.0"
description = "Python package for algorithmic trading"
authors = [
    { name = "Alejandro Requena", email = "rb.jandro@gmail.com" }
]
license = { text = "MIT" }
dependencies = [
    "matplotlib==3.10.0",
    "numpy==2.2.3",
    "plotly==6.0.0",
    "nbformat==5.10.4",
    "joblib==1.4.2"
]

[tool.setuptools.packages.find]
exclude = ["data", "data.*"]